--- a/CodeGeass/CommonCell/ZDCommonTableViewCell1.xib
+++ b/CodeGeass/CommonCell/ZDCommonTableViewCell1.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="2GM-gd-N5a" customClass="CGCommonTableViewCell1">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="2GM-gd-N5a" customClass="ZDCommonTableViewCell1">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2GM-gd-N5a" id="HST-Lo-5hc">
@@ -36,13 +37,6 @@
                         <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TPI-m7-oBF">
-                        <rect key="frame" x="15" y="59.5" width="305" height="0.0"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="0.5" id="RT7-ij-RTf"/>
-                        </constraints>
-                    </view>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell_arrow_right_gray" translatesAutoresizingMaskIntoConstraints="NO" id="P1s-Py-QiA">
                         <rect key="frame" x="295" y="22.5" width="15" height="15"/>
                         <constraints>
@@ -52,13 +46,10 @@
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="TPI-m7-oBF" secondAttribute="trailing" id="0WK-ZX-Z1z"/>
                     <constraint firstAttribute="trailing" secondItem="JC2-yy-CqC" secondAttribute="trailing" constant="15" id="AkE-3P-oBq"/>
                     <constraint firstItem="S1p-WS-b4Z" firstAttribute="trailing" secondItem="JC2-yy-CqC" secondAttribute="trailing" id="K2g-rv-bbn"/>
                     <constraint firstItem="S1p-WS-b4Z" firstAttribute="top" secondItem="JC2-yy-CqC" secondAttribute="bottom" id="NmV-0X-a9k"/>
                     <constraint firstItem="JC2-yy-CqC" firstAttribute="top" secondItem="bKu-tj-TFa" secondAttribute="top" id="Osi-HD-IjD"/>
-                    <constraint firstAttribute="bottom" secondItem="TPI-m7-oBF" secondAttribute="bottom" id="RJo-eb-jSj"/>
-                    <constraint firstItem="TPI-m7-oBF" firstAttribute="leading" secondItem="HST-Lo-5hc" secondAttribute="leading" constant="15" id="Te8-O5-epi"/>
                     <constraint firstItem="bKu-tj-TFa" firstAttribute="centerY" secondItem="HST-Lo-5hc" secondAttribute="centerY" id="cQR-KS-6TX"/>
                     <constraint firstItem="S1p-WS-b4Z" firstAttribute="bottom" secondItem="bKu-tj-TFa" secondAttribute="bottom" id="d3b-i8-gow"/>
                     <constraint firstItem="JC2-yy-CqC" firstAttribute="leading" secondItem="bKu-tj-TFa" secondAttribute="trailing" constant="15" id="doi-eg-r5X"/>
@@ -71,8 +62,6 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="bottomLabel" destination="S1p-WS-b4Z" id="e1g-hE-Aqa"/>
-                <outlet property="bottomLineView" destination="TPI-m7-oBF" id="2Lb-JA-lEk"/>
-                <outlet property="bottomLineViewLeftConstraint" destination="Te8-O5-epi" id="wxv-fP-nN7"/>
                 <outlet property="leftImageView" destination="bKu-tj-TFa" id="7eM-hY-jr3"/>
                 <outlet property="leftImageViewHeightConstraint" destination="L4V-c4-wgN" id="9E5-Dy-cCL"/>
                 <outlet property="rightArrowImageView" destination="P1s-Py-QiA" id="V1d-38-h5A"/>
