--- a/CodeGeass/CommonCell/ZDCommonTableViewCell3.xib
+++ b/CodeGeass/CommonCell/ZDCommonTableViewCell3.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="5WO-gV-OjK" customClass="CGCommonTableViewCell3">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="5WO-gV-OjK" customClass="ZDCommonTableViewCell3">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5WO-gV-OjK" id="0j3-Hf-O1Q">
@@ -39,13 +40,6 @@
                         <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gX-dR-EmC">
-                        <rect key="frame" x="15" y="59" width="305" height="0.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="0.5" id="LmX-rC-fM9"/>
-                        </constraints>
-                    </view>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell_arrow_right_gray" translatesAutoresizingMaskIntoConstraints="NO" id="l9n-hl-S8M">
                         <rect key="frame" x="295" y="22.5" width="15" height="15"/>
                         <constraints>
@@ -55,16 +49,13 @@
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="4gX-dR-EmC" firstAttribute="leading" secondItem="0j3-Hf-O1Q" secondAttribute="leading" constant="15" id="0hn-5B-vML"/>
                     <constraint firstAttribute="trailing" secondItem="l9n-hl-S8M" secondAttribute="trailing" constant="10" id="9it-8g-XYi"/>
-                    <constraint firstAttribute="bottom" secondItem="4gX-dR-EmC" secondAttribute="bottom" id="Aym-J2-oZ7"/>
                     <constraint firstItem="xzL-nD-87A" firstAttribute="top" secondItem="fX6-qp-RJE" secondAttribute="top" id="J6e-Wa-KfF"/>
                     <constraint firstAttribute="trailing" secondItem="xzL-nD-87A" secondAttribute="trailing" constant="15" id="LFj-Oc-PbQ"/>
                     <constraint firstItem="l9n-hl-S8M" firstAttribute="centerY" secondItem="0j3-Hf-O1Q" secondAttribute="centerY" id="LJi-lD-gqc"/>
                     <constraint firstItem="iwG-1K-uvS" firstAttribute="bottom" secondItem="fX6-qp-RJE" secondAttribute="bottom" id="PBX-Hb-xbG"/>
                     <constraint firstItem="fX6-qp-RJE" firstAttribute="centerY" secondItem="0j3-Hf-O1Q" secondAttribute="centerY" id="SgN-Vt-jge"/>
                     <constraint firstItem="xzL-nD-87A" firstAttribute="bottom" secondItem="fX6-qp-RJE" secondAttribute="bottom" id="U8c-zn-OQJ"/>
-                    <constraint firstAttribute="trailing" secondItem="4gX-dR-EmC" secondAttribute="trailing" id="Ygp-jr-nez"/>
                     <constraint firstItem="iwG-1K-uvS" firstAttribute="top" secondItem="fX6-qp-RJE" secondAttribute="top" id="cI4-Rs-oo2"/>
                     <constraint firstItem="fX6-qp-RJE" firstAttribute="leading" secondItem="0j3-Hf-O1Q" secondAttribute="leading" constant="15" id="ffx-qk-NRM"/>
                     <constraint firstItem="iwG-1K-uvS" firstAttribute="leading" secondItem="fX6-qp-RJE" secondAttribute="trailing" constant="15" id="ltk-5Z-Smq"/>
@@ -72,8 +63,6 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="bottomLineView" destination="4gX-dR-EmC" id="GAf-0w-o4H"/>
-                <outlet property="bottomLineViewLeftConstraint" destination="0hn-5B-vML" id="iAo-Lt-8eo"/>
                 <outlet property="leftImageView" destination="fX6-qp-RJE" id="FRq-zz-e8O"/>
                 <outlet property="leftImageViewHeightConstraint" destination="7Kb-wm-WKJ" id="4Jw-5R-vxs"/>
                 <outlet property="leftLabel" destination="iwG-1K-uvS" id="d3o-qY-4Cq"/>
