--- a/CodeGeass/CommonCell/ZDCommonTableViewCell4.xib
+++ b/CodeGeass/CommonCell/ZDCommonTableViewCell4.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CGCommonTableViewCell4">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ZDCommonTableViewCell4">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,13 +30,6 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgp-mK-27Z">
-                        <rect key="frame" x="15" y="43" width="305" height="0.0"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="0.5" id="S6c-dY-uSM"/>
-                        </constraints>
-                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell_arrow_right_gray" translatesAutoresizingMaskIntoConstraints="NO" id="M3M-Is-9J5">
                         <rect key="frame" x="295" y="14.5" width="15" height="15"/>
                         <constraints>
@@ -46,20 +40,15 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="y3g-ao-OTZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Efb-St-Oxf"/>
-                    <constraint firstItem="hgp-mK-27Z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="GZo-VV-SYo"/>
                     <constraint firstAttribute="trailing" secondItem="M3M-Is-9J5" secondAttribute="trailing" constant="10" id="IDx-9A-iE4"/>
                     <constraint firstItem="VYo-j4-Ebt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LCO-S0-mCk"/>
                     <constraint firstItem="VYo-j4-Ebt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Pf3-UY-Rbf"/>
-                    <constraint firstAttribute="trailing" secondItem="hgp-mK-27Z" secondAttribute="trailing" id="dFk-HA-i6i"/>
                     <constraint firstAttribute="trailing" secondItem="y3g-ao-OTZ" secondAttribute="trailing" constant="15" id="e0O-mv-daP"/>
-                    <constraint firstAttribute="bottom" secondItem="hgp-mK-27Z" secondAttribute="bottom" id="rYV-IA-3Kc"/>
                     <constraint firstItem="y3g-ao-OTZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="100" id="tUa-cg-f8e"/>
                     <constraint firstItem="M3M-Is-9J5" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uvN-Hr-1dy"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="bottomLineView" destination="hgp-mK-27Z" id="C1Q-D5-R9T"/>
-                <outlet property="bottomLineViewLeftConstraint" destination="GZo-VV-SYo" id="szV-yZ-GUp"/>
                 <outlet property="leftLabel" destination="VYo-j4-Ebt" id="mpL-gm-F0c"/>
                 <outlet property="rightArrowImageView" destination="M3M-Is-9J5" id="8sj-AJ-Xv2"/>
                 <outlet property="rightLabel" destination="y3g-ao-OTZ" id="4A5-bg-Wmh"/>
